[package]
name = "vimstoat"
version = "0.1.0"
edition = "2024"

[dependencies]
keyring-lib = { version = "1.0.3", features = ["tokio"] }
ratatui = "0.30.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = [
    "user-hooks",
] }
